@@ -1,6 +1,6 @@
                                                Hey Emacs! -*- coding: utf-8 -*-
 
-       Copyright (c) 1992-2017 Bruno Haible, Michael Stoll, Sam Steingold
+       Copyright (c) 1992-2018 Bruno Haible, Michael Stoll, Sam Steingold
                            All Rights Reserved
 
 
@@ -73,7 +73,8 @@ Maintenance:
   Bruno Haible, Michael Stoll 1992-1993
   Bruno Haible, Marcus Daniels 1994-1997
   Bruno Haible, Pierpaolo Bernardi, Sam Steingold 1998
-  Bruno Haible, Sam Steingold 1999-2017
+  Bruno Haible, Sam Steingold 1999-2000
+  Sam Steingold, Bruno Haible 2001-2018
 
 Email addresses (September 1992 or newer):
   Bruno Haible       bruno@clisp.org
@@ -81,5 +82,5 @@ Email addresses (September 1992 or newer):
   Jörg Höhle         Joerg-Cyril.Hoehle@t-systems.com
   Peter Burwood      clisp@arcangel.dircon.co.uk
   Marcus Daniels     marcus@sysc.pdx.edu
-  Pierpaolo Bernardi bernardp@cli.di.unipi.it
+  Pierpaolo Bernardi olopierpa@gmail.com
   Sam Steingold      sds@gnu.org
